fix: Config now takes files as InputStreams
Getting resources as files (with the java.nio.File class) doesn't work inside a JAR.